BalanceUpdate fixed. init-kafka added docker-compose.yml. get_wallets.go created as test.
